--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "project-6-portfolio",
   "version": "1.0.0",
   "description": "project 6 portfolio site",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shauncy777/project-6-portfolio.git"
   },
+  "engines":{
+    "node": "14.15.1"
+  },
   "author": "Shawn Daugherty Calhoun",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shauncy777/project-6-portfolio/issues"
   },
-  "homepage": "https://github.com/shauncy777/project-6-portfolio#readme"
+  "homepage": "https://github.com/shauncy777/project-6-portfolio#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
+  }
 }
